# dynestyx

./: .gitignore  CITATION.cff  CONTRIBUTING.md  README.md  conftest.py  main.py  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: build_docs.yml  lint.yml  python-publish.yml  test.yml  windows.yml
0.0.2/: 404.html  index.html  sitemap.xml
0.0.2/api_reference/: index.html
0.0.2/faq/: index.html
0.0.2/math_intro/: index.html
0.0.2/quick_example/: index.html
0.0.2/tutorials/: index.html
0.0.3/: 404.html  index.html  sitemap.xml
0.0.3/api_reference/: index.html
0.0.3/faq/: index.html
0.0.3/math_intro/: index.html
0.0.3/quick_example/: index.html
0.0.3/tutorials/: index.html
0.0.4/: 404.html  index.html  sitemap.xml
0.0.4/api_reference/: index.html
0.0.4/faq/: index.html
0.0.4/math_intro/: index.html
0.0.4/quick_example/: index.html
0.0.4/tutorials/: index.html
0.0.5/: 404.html  index.html  sitemap.xml
0.0.5/api_reference/: index.html
0.0.5/faq/: index.html
0.0.5/math_intro/: index.html
0.0.5/quick_example/: index.html
0.0.5/search/: search_index.json
0.0.5/tutorials/: index.html
0.0.6/: 404.html  index.html  sitemap.xml
0.0.6/api_reference/: index.html
0.0.6/faq/: index.html
0.0.6/javascripts/: mathjax.js
0.0.6/math_intro/: index.html
0.0.6/quick_example/: index.html
0.0.6/tutorials/: index.html
0.0.7/: 404.html  index.html  sitemap.xml
0.0.7/api_reference/: index.html
0.0.7/faq/: index.html
0.0.7/math_intro/: index.html
0.0.7/quick_example/: index.html
0.0.7/tutorials/: index.html
0.1.0/: 404.html  index.html  sitemap.xml
0.1.0/api_reference/: index.html
0.1.0/faq/: index.html
0.1.0/math_intro/: index.html
0.1.0/quick_example/: index.html
0.1.0/search/: search_index.json
0.1.0/tutorials/: index.html
agent_skills/grill-with-docs/: ATTRIBUTION.md
agent_skills/implement-with-dynestyx/: SKILL.md  inference-filtering.md  inference-mcmc.md  inference-smoothing.md  inference-svi.md  reference.md
agent_skills/modeling-with-dynestyx/: SKILL.md
dev/: 404.html  index.html  objects.inv  sitemap.xml
dev/api_reference/: index.html
dev/faq/: index.html
dev/math_intro/: index.html
dev/quick_example/: index.html
dev/search/: search_index.json
dev/tutorials/: index.html
docs/: _notebook_banner_template.md  api_reference.md  faq.md  index.md  intro.md  math_intro.md  quick_example.ipynb  tutorials.md  versioning.md
docs/api_reference/: developer.md  diagnostics.md  discretizers.md  dynamical_models.md  filters.md  handlers.md  hmm_filter.md  index.md  observations.md  ops.md  plotters.md  simulators.md  utils.md
docs/deep_dives/: continuous_time_lti_profile_likelihood.ipynb  discrete_time_kf_associative_scaling.ipynb  discrete_time_lti_profile_likelihood.ipynb  discrete_time_lti_standard_vs_canonical copy.ipynb  discrete_time_lti_standard_vs_canonical.ipynb  fhn_profile_likelihood_vs_sample_rate.ipynb  fhn_sparse_id.ipynb  fhn_sparse_id.py  gp_drift copy.ipynb  gp_drift.ipynb  l63_discretizer_enkf_benchmark.ipynb  l63_forecast_examples.ipynb  l63_profile_likelihood_vs_sample_rate copy.ipynb  l63_profile_likelihood_vs_sample_rate.ipynb  l63_slow_sampling.ipynb  l63_speedup_dirac_vs_enkf.ipynb  lv_uode.ipynb  mcmc_inference_algorithm_comparison.ipynb  particle_hmc.ipynb  pilco.ipynb  pilco_equations.md  simple_standard_bayesian_lti_identification.ipynb  wsp_box_constrained_sde.ipynb
docs/logo/: make_logo.py
docs/tutorials/: discrete_time_inference.ipynb  gentle_intro.ipynb  hmm_inference.ipynb  observation_scoring_with_filters.ipynb  ode_inference.ipynb  quickstart.ipynb  sde_inference.ipynb  sde_non_gaussian_observations.ipynb
dsx/: __init__.py  discretizers.py  dynamical_models.py  filters.py  handlers.py  hmm_filter.py  observations.py  ops.py  plotters.py  probabilistic_numerics.py  simulators.py  solvers.py  unrollers.py  utils.py
dsx/cuthbert_patches/: multinomial_resampling.py  systematic_resampling.py
dsx/models/: lorenz63.py
dynestyx/: __init__.py  discretizers.py  dynamical_models.py  filters.py  handlers.py  hmm_filter.py  latent_state_builder.py  lti_dynamics.py  observation_missingness.py  observations.py  ops.py  path_log_prob.py  plotters.py  simulation.py  simulation_utils.py  simulator_configs.py  simulators.py  types.py  utils.py
dynestyx/cuthbert_patches/: __init__.py  systematic_resampling.py
dynestyx/models/: core.py  (+7 more)
scripts/: clean.sh  lint.sh  lv_uode_debug.py  monitor_test_resources.py  preview_versioned_docs.sh  replay_combinatorial_case.py  test.sh  test_full.sh  test_predict_times.py
tests/: conftest.py  fixtures.py  models.py  test_batched_annotation_smokes.py  test_blackjax_no_crn.py  test_bm_dim_plate.py  test_combinatorial_forward_matrix.py  test_desirable_shared_initial_mean_hierarchical.py  test_discreteTime_generic.py  test_discretizers.py  test_distribution_utils.py  test_dumb_conditioning.py  test_dumb_mcmc.py  test_dumb_solver.py  test_filter_scoring.py  test_filter_simulator.py  test_filter_standalone.py  test_filters.py  test_hierarchical_inference_coverage_smokes.py  test_hierarchical_simulator_discretizer_smokes.py  test_hierarchical_simulator_inference_smokes.py  test_hierarchical_smokes.py  test_hierarchical_svi_smokes.py  test_hmm.py  test_inference_integrations_utils.py  test_l63_ODE_mcmc.py  test_l63_SDE_mcmc.py  test_l63_mcmc.py  test_l63_mcmc_smoke.py  test_latent_state_builder.py  test_lti_mcmc.py  test_mcmc_filter_smokes.py  test_mcmc_filter_smokes_discrete.py  test_mcmc_smokes.py  test_mcmc_smokes_discrete.py  test_missing_observations.py  test_models_core.py  test_pfjax_integration.py  test_pilco_smoke.py  test_plate_vector_initial_mean_continuous_drift_diffusion.py  (+14 more)
(+701 files in other folders)
