[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynestyx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cd-dynamax",
    "effectful",
    "matplotlib>=3.10.7",
    "numpyro>=0.19.0",
    "pytest>=9.0.1",
    "arviz>=0.18.0",
    "blackjax>=1.3",
    "pytkdocs-tweaks>=0.0.8",
    "mkdocstrings[python]>=1.0.1",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
    "equinox>=0.13.2",
    "cuthbert>=0.0.2",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
]

[tool.hatch.build.targets.wheel]
packages = ["dynestyx"]

[tool.uv.sources]
effectful = { git = "https://github.com/BasisResearch/effectful.git" }
cuthbert = { git = "https://github.com/DanWaxman/cuthbert.git", rev = "b56783de77ef62804b8458463a7bf907c1296017", subdirectory = "pkg/cuthbert"}
cd-dynamax = { git = "https://github.com/DanWaxman/cd_dynamax.git", rev = "dw-dpf" }

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocs>=1.6.1",
    "mypy>=1.19.1",
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
    "mkdocs-jupyter>=0.25.1",
    "seaborn>=0.13.2",
    "imageio>=2.37.2",
]

[tool.ruff.lint]
select = [
  "F",       # pyflakes
  "I",       # isort
  "PERF",    # performance
  "UP"       # pyupgrade
]

[[tool.mypy.overrides]]
module = ["cd_dynamax.*", "numpyro.*", "blackjax.*", "cuthbert.*", "cuthbertlib.*", "optax.*"]
follow_untyped_imports = true
