[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynestyx"
version = "0.0.2"
description = "NumPyro integration for dynamical systems"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12,<3.14"
authors = [
    { name = "Basis" },
]
keywords = [
    "machine learning",
    "statistics",
    "dynamical systems",
    "bayesian modeling",
    "jax",
]
classifiers = [
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "effectful",
    "cuthbert @ git+https://github.com/state-space-models/cuthbert.git#subdirectory=pkg/cuthbert",
    "cuthbertlib @ git+https://github.com/state-space-models/cuthbert.git#subdirectory=pkg/cuthbertlib",
    "cd-dynamax @ git+https://github.com/HD-UQ/cd_dynamax.git@public",
    "matplotlib>=3.10.7",
    "numpyro>=0.19.0",
    "pytest>=9.0.1",
    "arviz>=0.18.0,<1.0.0",
    "blackjax>=1.3",
    "pytkdocs-tweaks>=0.0.8",
    "mkdocstrings[python]>=1.0.1",
    "jupyter>=1.1.1",
    "ipywidgets>=8.1.8",
    "equinox>=0.13.2",
    "jax>=0.6.2",
    "jaxlib>=0.6.2",
    "tfp-nightly>=0.26.0dev20250530"
]

[tool.hatch.build.targets.wheel]
packages = ["dynestyx"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.uv.sources]
cuthbert = { git = "https://github.com/state-space-models/cuthbert.git", subdirectory = "pkg/cuthbert"}
cd-dynamax = { git = "https://github.com/HD-UQ/cd_dynamax.git", branch = "public" }

[dependency-groups]
dev = [
    "mike>=2.1.0",
    "mkdocs-material>=9.7.1",
    "mkdocs>=1.6.1",
    "ty",
    "jaxtyping>=0.2.34",
    "pytest>=9.0.1",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
    "mkdocs-jupyter>=0.25.1",
    "seaborn>=0.13.2",
    "imageio>=2.37.2",
    "mkdocs-jupyter>=0.24,<0.26",
    "nbconvert>=7"
]

[tool.ruff.lint]
select = [
  "F",       # pyflakes
  "I",       # isort
  "PERF",    # performance
  "UP"       # pyupgrade
]
ignore = [
  "F722",    # jaxtyping shape annotations use strings ruff can't parse
]

